third_party/llvm-project/llvm/test/MC/AArch64/SME/smstart-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sme 2>&1 < %s| FileCheck %s

// ------------------------------------------------------------------------- //
// Invalid keyword

smstart foo
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid operand for instruction
// CHECK-NEXT: smstart foo
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:
